Banco de dados implementado
